Revert "Add library list + story delete endpoints to the OpenAPI spec"
This reverts commit 48ad36c06b1c8d8571f562f1583a100c8adf9f37.
